--- a/website/Templates/config_success.html
+++ b/website/Templates/config_success.html
@@ -9,6 +9,6 @@
 {% for foo in var %}
     <p>{{ foo }}</p>
 {% endfor %}
-<a href="/config/0"><button type="button">back</button></a>
+<a href="/config/0/{{ user.username }}"><button type="button" class="btn-primary">Back</button></a>
 </body>
 </html>
