--- a/website/Templates/base_template.html
+++ b/website/Templates/base_template.html
@@ -29,7 +29,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
-  <body>
+  <body onload="startTime()">
     <!-- Side Navbar -->
     <nav class="side-navbar">
       <div class="side-navbar-wrapper">
@@ -50,9 +50,10 @@
             </ul>
           <h5 class="sidenav-heading">Management</h5>
             <ul id="side-main-menu" class="side-menu list-unstyled ">
-                <li class="{% block active2 %}{% endblock %}"><a href="/config/0"> <i class="icon-form"></i>Configuration</a></li>
+                <li class="{% block active2 %}{% endblock %}"><a href="/config/0/{{ user.username }}"> <i class="icon-form"></i>Configuration</a></li>
                 <li class="{% block active3 %}{% endblock %}"><a href="/template_file"> <i class="icon-list"></i>Template file</a></li>
-                <li class="{% block active4 %}{% endblock %}"><a href="/commandLine/0"> <i class="icon-screen"></i>Command line</a></li>
+                <li class="{% block active4 %}{% endblock %}"><a href="/commandLine/0/{{ user.username }}"> <i class="icon-screen"></i>Command line</a></li>
+                <li class="{% block active5 %}{% endblock %}"><a href="/logging"> <i class="icon-presentation"></i>Logging</a></li>
             </ul>
         </div>
       </div>
@@ -66,36 +67,31 @@
               <div class="navbar-header"><a id="toggle-btn" href="#" class="menu-btn"><i class="icon-bars"> </i></a><a href="/index" class="navbar-brand">
                   <div class="brand-text d-none d-md-inline-block"><span>Smart Network </span><strong class="text-primary"> Controller System</strong></div></a></div>
               <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
-               <!-- <li class="nav-item dropdown"> <a id="notifications" rel="nofollow" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link"><i class="fa fa-bell"></i><span class="badge badge-warning">12</span></a>
+                <!-- Account dropdown -->
+                <li class="nav-item dropdown"> <a id="messages" rel="nofollow" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link">Account <i class="fa fa-angle-down"></i>
                   <ul aria-labelledby="notifications" class="dropdown-menu">
-                    <li><a rel="nofollow" href="#" class="dropdown-item"> 
-                        <div class="notification d-flex justify-content-between">
-                          <div class="notification-content"><i class="fa fa-envelope"></i>You have 6 new messages </div>
-                          <div class="notification-time"><small>4 minutes ago</small></div>
-                        </div></a></li>
-                    <li><a rel="nofollow" href="#" class="dropdown-item"> 
-                        <div class="notification d-flex justify-content-between">
-                          <div class="notification-content"><i class="fa fa-twitter"></i>You have 2 followers</div>
-                          <div class="notification-time"><small>4 minutes ago</small></div>
-                        </div></a></li>
-                    <li><a rel="nofollow" href="#" class="dropdown-item"> 
-                        <div class="notification d-flex justify-content-between">
-                          <div class="notification-content"><i class="fa fa-upload"></i>Server Rebooted</div>
-                          <div class="notification-time"><small>4 minutes ago</small></div>
-                        </div></a></li>
-                    <li><a rel="nofollow" href="#" class="dropdown-item"> 
-                        <div class="notification d-flex justify-content-between">
-                          <div class="notification-content"><i class="fa fa-twitter"></i>You have 2 followers</div>
-                          <div class="notification-time"><small>10 minutes ago</small></div>
-                        </div></a></li>
-                    <li><a rel="nofollow" href="#" class="dropdown-item all-notifications text-center"> <strong> <i class="fa fa-bell"></i>view all notifications                                            </strong></a></li>
+                      <form action="{% url 'accounts:logout' %}" method="post">
+                          {% csrf_token %}
+                          {% if user.is_superuser %}
+                            <li><a rel="nofollow" href="#" class="dropdown-item d-flex">
+                              <div class="msg-body">
+                                </h3><h3 class="h5">Username: {{ user.username }}</h3><span>{{ user.first_name }}  {{ user.last_name }}</span><small>{{ user.last_login }}</small>
+                              </div></a></li>
+                            <li>
+                            <a rel="nofollow" href="/admin" class="dropdown-item all-notifications text-center"><strong><i class="fa fa-pencil"></i>Admin page</strong></a>
+                            <button type="submit" class="dropdown-item all-notifications text-center" ><strong><i class="fa fa-sign-out"></i> Logout</strong></button>
+                          {% else %}
+                            <li><a rel="nofollow" href="#" class="dropdown-item d-flex">
+                              <div class="msg-body">
+                                </h3><h3 class="h5">Username: {{ user.username }}</h3><span>{{ user.first_name }}  {{ user.last_name }}</span><small>{{ user.last_login }}</small>
+                              </div></a></li>
+                            <li>
+                            <button type="submit" class=" fa fa-sign-out dropdown-item all-notifications text-center" >Logout</button>
+                          {% endif %}
+                      </form>
+                    </li>
                   </ul>
-                </li>-->
-                <li class="nav-item">
-                    <form action="{% url 'accounts:logout' %}" method="post">
-                        {% csrf_token %}
-                       <button type="submit" class="nav-link fa fa-sign-out btn-default">Logout</button>
-                    </form>
+                </a>
                 </li>
               </ul>
             </div>
@@ -134,5 +130,18 @@
     <script src="/static/js/charts-custom.js"></script>
     <!-- Main File-->
     <script src="/static/js/front.js"></script>
+    <!-- time lapse function -->
+    <script>
+        function startTime() {
+            var today = new Date();
+            var m = today.getMinutes();
+            // add a zero in front of numbers<10
+            document.getElementById("time1").innerHTML = 'Last ' + m%30 + ' minutes';
+            document.getElementById("time2").innerHTML = 'Last ' + m%30 + ' minutes';
+            document.getElementById("time3").innerHTML = 'Last ' + m%30 + ' minutes';
+            document.getElementById("time4").innerHTML = 'Last ' + m%30 + ' minutes';
+            var t = setTimeout(function(){ startTime() }, 500);
+        }
+    </script>
   </body>
 </html>
