--- a/website/Templates/node_detail.html
+++ b/website/Templates/node_detail.html
@@ -32,15 +32,15 @@
                         <tr></tr>
                         <tr>
                           <td>Node status</td>
-                          <td>Node is {{ det.status }}.</td>
+                          <td>Node is {{ detail.status }}.</td>
                         </tr>
                         <tr>
                           <td>Hostname</td>
-                          <td>{{ host }}</td>
+                          <td>{{ device.hostname }}</td>
                         </tr>
                         <tr>
                           <td>IP address</td>
-                          <td>{{ det.ip }}</td>
+                          <td>{{ detail.ip }}</td>
                         </tr>
                         <tr>
                           <td>Serial number</td>
@@ -48,35 +48,35 @@
                         </tr>
                         <tr>
                           <td>Manufacturer</td>
-                          <td>{{ det.manufacturer }}</td>
+                          <td>{{ detail.manufacturer }}</td>
                         </tr>
                         <tr>
                           <td>Devices</td>
-                          <td>{{ dev }}</td>
+                          <td>{{ device.devID.name }}</td>
                         </tr>
                         <tr>
                           <td>Model</td>
-                          <td>{{ mod }}</td>
+                          <td>{{ device.modID.name }}</td>
                         </tr>
                         <tr>
                           <td>Device up time</td>
-                          <td>{{ det.up_time }}</td>
+                          <td>{{ detail.up_time }}</td>
                         </tr>
                         <tr>
                           <td>Interface using</td>
-                          <td>{{ det.interface_using }}</td>
+                          <td>{{ detail.interface_using }}</td>
                         </tr>
                         <tr>
                           <td>Software version</td>
-                          <td>{{ det.sw_version }}</td>
+                          <td>{{ detail.sw_version }}</td>
                         </tr>
                         <tr>
                           <td>Software image</td>
-                          <td>{{ det.sw_image }}</td>
+                          <td>{{ detail.sw_image }}</td>
                         </tr>
                         <tr>
                           <td>Last reset from</td>
-                          <td>{{ det.last_reset }}</td>
+                          <td>{{ detail.last_reset }}</td>
                         </tr>
                       </tbody>
                     </table>
@@ -102,7 +102,7 @@
                         <tr>
                           <td>Fan</td>
                           <td>
-                              {% if fan == 'OK' and det.status == 'Up' %}
+                              {% if detail.fan == 'OK' and detail.status == 'Up' %}
                                 <img src="/static/img/green-button-md.png" alt="green-button" class="img-fluid rounded-circle" height="20" width="20">
                               {% else %}
                                 <img src="/static/img/red-button.jpg" alt="red-button" class="img-fluid rounded-circle" height="20" width="20">
@@ -112,7 +112,7 @@
                         <tr>
                           <td>Power Supply</td>
                           <td>
-                              {% if power == 'OK' and det.status == 'Up' %}
+                              {% if detail.power == 'OK' and detail.status == 'Up' %}
                                 <img src="/static/img/green-button-md.png" alt="green-button" class="img-fluid rounded-circle" height="20" width="20">
                               {% else %}
                                 <img src="/static/img/red-button.jpg" alt="red-button" class="img-fluid rounded-circle" height="20" width="20">
@@ -122,7 +122,7 @@
                         <tr>
                           <td>Temperature</td>
                           <td>
-                              {% if temp == 'OK' and det.status == 'Up' %}
+                              {% if detail.temp == 'OK' and detail.status == 'Up' %}
                                 <img src="/static/img/green-button-md.png" alt="green-button" class="img-fluid rounded-circle" height="20" width="20">
                               {% else %}
                                 <img src="/static/img/red-button.jpg" alt="red-button" class="img-fluid rounded-circle" height="20" width="20">
@@ -136,7 +136,7 @@
               </div>
             </div>
           </div>
-          {% if det.status == 'Up' %}
+          {% if detail.status == 'Up' %}
           <header>
             <h1 class="h3 display">Configuration</h1>
           </header>
@@ -145,8 +145,8 @@
                     <div class="card-body">
                         <div class="form-group row">
                           <div class="col-sm-4 offset-sm-4">
-                            <a href="/config/{{ var1 }}"><button type="submit" class="btn btn-primary">Day 1 Configuration</button></a>
-                            <a href="/commandLine/{{ var1 }}"><button type="submit" class="btn btn-secondary">Command line</button></a>
+                            <a href="/config/{{ var1 }}/{{ user.username }}"><button type="submit" class="btn btn-primary">Day 1 Configuration</button></a>
+                            <a href="/commandLine/{{ var1 }}/{{ user.username }}"><button type="submit" class="btn btn-secondary">Command line</button></a>
                           </div>
                         </div>
                     </div>
