--- a/website/Templates/template_file.html
+++ b/website/Templates/template_file.html
@@ -22,9 +22,6 @@
           <header>
             <h1 class="h3 display">Template file</h1>
           </header>
-          <div class="container">
-
-          </div>
           <div class="row">
               <div class="col-lg-12">
               <div class="card">
@@ -72,10 +69,10 @@
                         {% for i in file %}
                             <tr>
                               <th scope="row">{{ i.id }}</th>
-                              <td><a href="" onclick="myFunction({{ i.id }})">{{ i.upload }}</a></td>
+                              <td><a class="text-primary" onclick="myFunction({{ i.id }})">{{ i.upload }}</a></td>
                                   <script>
                                     function myFunction(x) {
-                                    window.open("/view_file/"+x, "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=500,left=500,width=700,height=500");
+                                    window.open("/view_file/"+x+"/0", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=500,left=500,width=700,height=500");
                                     }
                                   </script>
                               <td>{{ i.create_date }}</td>
@@ -85,7 +82,6 @@
                             </tr>
                         {% endfor %}
                       </tbody>
-
                     </table>
                   </div>
                 </div>
