Update template and bug fix.
bug fix in template

--- a/website/Templates/base_template.html
+++ b/website/Templates/base_template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home | Smart Network Controller System</title>
+    <title>{% block title %}{% endblock %}</title> {#Home | Smart Network Controller System#}
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
