--- a/website/Templates/commandLine.html
+++ b/website/Templates/commandLine.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base_template.html' %}
-
+{% block title %}Command line | Smart Network Controller System{% endblock %}
     {% block active4 %}
         active
     {% endblock %}
