--- a/website/Templates/d1config.html
+++ b/website/Templates/d1config.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base_template.html' %}
-
+{% block title %}Configuration | Smart Network Controller System{% endblock %}
     {% block active2 %}
         active
     {% endblock %}
