--- a/website/Templates/index.html
+++ b/website/Templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 {% extends 'base_template.html' %}
+    {% block title %}Home | Smart Network Controller System{% endblock %}
     {% block active %}
         active
     {% endblock %}
