--- a/website/Templates/logging.html
+++ b/website/Templates/logging.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base_template.html' %}
-
+{% block title %}Logging | Smart Network Controller System{% endblock %}
     {% block active5 %}
         active
     {% endblock %}
