--- a/website/Templates/rack_detail.html
+++ b/website/Templates/rack_detail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base_template.html' %}
-
+{% block title %}Rack details | Smart Network Controller System{% endblock %}
 {% block content %}
     <!-- Breadcrumb-->
         <div class="breadcrumb-holder">
