--- a/website/Templates/template_file.html
+++ b/website/Templates/template_file.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base_template.html' %}
-
+{% block title %}Template file | Smart Network Controller System{% endblock %}
     {% block active3 %}
         active
     {% endblock %}
