--- a/website/Templates/cli.html
+++ b/website/Templates/cli.html
@@ -2,7 +2,7 @@
 <html style="background: black">
 	<head>
 		<meta charset="utf-8"/>
-		<title>CLI</title>
+		<title>CLI | Smart Network Controller System</title>
 		<script src="/static/js/terminal.js"></script>
         <!-- Bootstrap CSS-->
         <link rel="stylesheet" href="/static/vendor/bootstrap/css/bootstrap.min.css">
